crates/mesh-lexer/tests/snapshots/lexer_tests__full_program.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: ModuleDocComment
  text: "##! A sample Mesh module"
  span:
    - 0
    - 24
- kind: Newline
  text: "\n"
  span:
    - 24
    - 25
- kind: Newline
  text: "\n"
  span:
    - 25
    - 26
- kind: Module
  text: module
  span:
    - 26
    - 32
- kind: Ident
  text: Counter
  span:
    - 33
    - 40
- kind: Do
  text: do
  span:
    - 41
    - 43
- kind: Newline
  text: "\n"
  span:
    - 43
    - 44
- kind: DocComment
  text: "## Create a new counter"
  span:
    - 46
    - 69
- kind: Newline
  text: "\n"
  span:
    - 69
    - 70
- kind: Struct
  text: struct
  span:
    - 72
    - 78
- kind: Ident
  text: State
  span:
    - 79
    - 84
- kind: Do
  text: do
  span:
    - 85
    - 87
- kind: Newline
  text: "\n"
  span:
    - 87
    - 88
- kind: Ident
  text: count
  span:
    - 92
    - 97
- kind: ColonColon
  text: "::"
  span:
    - 98
    - 100
- kind: Ident
  text: Int
  span:
    - 101
    - 104
- kind: Newline
  text: "\n"
  span:
    - 104
    - 105
- kind: End
  text: end
  span:
    - 107
    - 110
- kind: Newline
  text: "\n"
  span:
    - 110
    - 111
- kind: Newline
  text: "\n"
  span:
    - 111
    - 112
- kind: Pub
  text: pub
  span:
    - 114
    - 117
- kind: Fn
  text: fn
  span:
    - 118
    - 120
- kind: Ident
  text: new
  span:
    - 121
    - 124
- kind: LParen
  text: (
  span:
    - 124
    - 125
- kind: RParen
  text: )
  span:
    - 125
    - 126
- kind: Arrow
  text: "->"
  span:
    - 127
    - 129
- kind: Ident
  text: State
  span:
    - 130
    - 135
- kind: Do
  text: do
  span:
    - 136
    - 138
- kind: Newline
  text: "\n"
  span:
    - 138
    - 139
- kind: Ident
  text: State
  span:
    - 143
    - 148
- kind: LBrace
  text: "{"
  span:
    - 149
    - 150
- kind: Ident
  text: count
  span:
    - 151
    - 156
- kind: Colon
  text: ":"
  span:
    - 156
    - 157
- kind: IntLiteral
  text: "0"
  span:
    - 158
    - 159
- kind: RBrace
  text: "}"
  span:
    - 160
    - 161
- kind: Newline
  text: "\n"
  span:
    - 161
    - 162
- kind: End
  text: end
  span:
    - 164
    - 167
- kind: Newline
  text: "\n"
  span:
    - 167
    - 168
- kind: Newline
  text: "\n"
  span:
    - 168
    - 169
- kind: Pub
  text: pub
  span:
    - 171
    - 174
- kind: Fn
  text: fn
  span:
    - 175
    - 177
- kind: Ident
  text: increment
  span:
    - 178
    - 187
- kind: LParen
  text: (
  span:
    - 187
    - 188
- kind: Ident
  text: state
  span:
    - 188
    - 193
- kind: RParen
  text: )
  span:
    - 193
    - 194
- kind: Do
  text: do
  span:
    - 195
    - 197
- kind: Newline
  text: "\n"
  span:
    - 197
    - 198
- kind: Let
  text: let
  span:
    - 202
    - 205
- kind: Ident
  text: new_count
  span:
    - 206
    - 215
- kind: Eq
  text: "="
  span:
    - 216
    - 217
- kind: Ident
  text: state
  span:
    - 218
    - 223
- kind: Dot
  text: "."
  span:
    - 223
    - 224
- kind: Ident
  text: count
  span:
    - 224
    - 229
- kind: Plus
  text: +
  span:
    - 230
    - 231
- kind: IntLiteral
  text: "1"
  span:
    - 232
    - 233
- kind: Newline
  text: "\n"
  span:
    - 233
    - 234
- kind: Percent
  text: "%"
  span:
    - 238
    - 239
- kind: Ident
  text: State
  span:
    - 239
    - 244
- kind: LBrace
  text: "{"
  span:
    - 244
    - 245
- kind: Ident
  text: state
  span:
    - 246
    - 251
- kind: Bar
  text: "|"
  span:
    - 252
    - 253
- kind: Ident
  text: count
  span:
    - 254
    - 259
- kind: Colon
  text: ":"
  span:
    - 259
    - 260
- kind: Ident
  text: new_count
  span:
    - 261
    - 270
- kind: RBrace
  text: "}"
  span:
    - 271
    - 272
- kind: Newline
  text: "\n"
  span:
    - 272
    - 273
- kind: End
  text: end
  span:
    - 275
    - 278
- kind: Newline
  text: "\n"
  span:
    - 278
    - 279
- kind: Newline
  text: "\n"
  span:
    - 279
    - 280
- kind: Pub
  text: pub
  span:
    - 282
    - 285
- kind: Fn
  text: fn
  span:
    - 286
    - 288
- kind: Ident
  text: display
  span:
    - 289
    - 296
- kind: LParen
  text: (
  span:
    - 296
    - 297
- kind: Ident
  text: state
  span:
    - 297
    - 302
- kind: RParen
  text: )
  span:
    - 302
    - 303
- kind: Do
  text: do
  span:
    - 304
    - 306
- kind: Newline
  text: "\n"
  span:
    - 306
    - 307
- kind: StringStart
  text: "\""
  span:
    - 311
    - 312
- kind: StringContent
  text: "Count is "
  span:
    - 312
    - 321
- kind: InterpolationStart
  text: "${"
  span:
    - 321
    - 323
- kind: Ident
  text: state
  span:
    - 323
    - 328
- kind: Dot
  text: "."
  span:
    - 328
    - 329
- kind: Ident
  text: count
  span:
    - 329
    - 334
- kind: InterpolationEnd
  text: "}"
  span:
    - 334
    - 335
- kind: StringEnd
  text: "\""
  span:
    - 335
    - 336
- kind: Newline
  text: "\n"
  span:
    - 336
    - 337
- kind: End
  text: end
  span:
    - 339
    - 342
- kind: Newline
  text: "\n"
  span:
    - 342
    - 343
- kind: End
  text: end
  span:
    - 343
    - 346
- kind: Newline
  text: "\n"
  span:
    - 346
    - 347
- kind: Newline
  text: "\n"
  span:
    - 347
    - 348
- kind: Comment
  text: "# Main entry point"
  span:
    - 348
    - 366
- kind: Newline
  text: "\n"
  span:
    - 366
    - 367
- kind: Let
  text: let
  span:
    - 367
    - 370
- kind: Ident
  text: counter
  span:
    - 371
    - 378
- kind: Eq
  text: "="
  span:
    - 379
    - 380
- kind: Ident
  text: Counter
  span:
    - 381
    - 388
- kind: Dot
  text: "."
  span:
    - 388
    - 389
- kind: Ident
  text: new
  span:
    - 389
    - 392
- kind: LParen
  text: (
  span:
    - 392
    - 393
- kind: RParen
  text: )
  span:
    - 393
    - 394
- kind: Newline
  text: "\n"
  span:
    - 394
    - 395
- kind: Let
  text: let
  span:
    - 395
    - 398
- kind: Ident
  text: updated
  span:
    - 399
    - 406
- kind: Eq
  text: "="
  span:
    - 407
    - 408
- kind: Ident
  text: counter
  span:
    - 409
    - 416
- kind: Pipe
  text: "|>"
  span:
    - 417
    - 419
- kind: Ident
  text: Counter
  span:
    - 420
    - 427
- kind: Dot
  text: "."
  span:
    - 427
    - 428
- kind: Ident
  text: increment
  span:
    - 428
    - 437
- kind: LParen
  text: (
  span:
    - 437
    - 438
- kind: RParen
  text: )
  span:
    - 438
    - 439
- kind: Pipe
  text: "|>"
  span:
    - 440
    - 442
- kind: Ident
  text: Counter
  span:
    - 443
    - 450
- kind: Dot
  text: "."
  span:
    - 450
    - 451
- kind: Ident
  text: increment
  span:
    - 451
    - 460
- kind: LParen
  text: (
  span:
    - 460
    - 461
- kind: RParen
  text: )
  span:
    - 461
    - 462
- kind: Newline
  text: "\n"
  span:
    - 462
    - 463
- kind: Let
  text: let
  span:
    - 463
    - 466
- kind: Ident
  text: message
  span:
    - 467
    - 474
- kind: Eq
  text: "="
  span:
    - 475
    - 476
- kind: Ident
  text: Counter
  span:
    - 477
    - 484
- kind: Dot
  text: "."
  span:
    - 484
    - 485
- kind: Ident
  text: display
  span:
    - 485
    - 492
- kind: LParen
  text: (
  span:
    - 492
    - 493
- kind: Ident
  text: updated
  span:
    - 493
    - 500
- kind: RParen
  text: )
  span:
    - 500
    - 501
- kind: Newline
  text: "\n"
  span:
    - 501
    - 502
- kind: Eof
  text: ""
  span:
    - 502
    - 502
