crates/mesh-lexer/tests/snapshots/lexer_tests__interpolation_with_braces.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: InterpolationStart
  text: "${"
  span:
    - 1
    - 3
- kind: Ident
  text: map
  span:
    - 3
    - 6
- kind: LBracket
  text: "["
  span:
    - 6
    - 7
- kind: Ident
  text: key
  span:
    - 7
    - 10
- kind: RBracket
  text: "]"
  span:
    - 10
    - 11
- kind: InterpolationEnd
  text: "}"
  span:
    - 11
    - 12
- kind: StringEnd
  text: "\""
  span:
    - 12
    - 13
- kind: Eof
  text: ""
  span:
    - 13
    - 13
