crates/mesh-lexer/tests/snapshots/lexer_tests__interpolation_with_expression.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: StringContent
  text: "result: "
  span:
    - 1
    - 9
- kind: InterpolationStart
  text: "${"
  span:
    - 9
    - 11
- kind: Ident
  text: a
  span:
    - 11
    - 12
- kind: Plus
  text: +
  span:
    - 13
    - 14
- kind: Ident
  text: b
  span:
    - 15
    - 16
- kind: Star
  text: "*"
  span:
    - 17
    - 18
- kind: IntLiteral
  text: "2"
  span:
    - 19
    - 20
- kind: InterpolationEnd
  text: "}"
  span:
    - 20
    - 21
- kind: StringEnd
  text: "\""
  span:
    - 21
    - 22
- kind: Eof
  text: ""
  span:
    - 22
    - 22
