crates/mesh-lexer/tests/snapshots/lexer_tests__self_expr_tokens.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: SelfKw
  text: self
  span:
    - 0
    - 4
- kind: LParen
  text: (
  span:
    - 4
    - 5
- kind: RParen
  text: )
  span:
    - 5
    - 6
- kind: Eof
  text: ""
  span:
    - 6
    - 6
