crates/mesh-lexer/tests/snapshots/lexer_tests__spans_accurate.snap
---
source: crates/mesh-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Let
  text: let
  span:
    - 0
    - 3
- kind: Ident
  text: x
  span:
    - 4
    - 5
- kind: Eq
  text: "="
  span:
    - 6
    - 7
- kind: IntLiteral
  text: "42"
  span:
    - 8
    - 10
- kind: Eof
  text: ""
  span:
    - 10
    - 10
